--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "drone-server1",
+  "name": "drone-server",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -11,17 +11,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
-  },
-  "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "express-session": "^1.18.0"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
